Refactored connectToWiki and revisionParser